...
        android:visibility="visible"/>


    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tutorList"/>


</RelativeLayout>

