<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_home_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_home_screen"
        app:menu="@menu/activity_home_screen_drawer" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="false"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="66dp">

        <TextView
            android:text="Alberto Chiappa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/profileName"
            android:paddingTop="10dp"
            android:textSize="36sp"/>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/ratingBarProfessor"
            style="?android:attr/ratingBarStyleIndicator"
            android:numStars="5"
            android:stepSize="0.1"
            android:isIndicator="true" />

        <ProgressBar
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:id="@+id/levelBar"
            android:progress="85"
            android:progressDrawable="@drawable/greenprogress"
            android:layout_marginTop="20dp"/>

        <TextView
            android:text="''I am a decently experienced Maths teacher: I have thaught Mathematics to several undergraduates during my bachelor. I've taken several exams in different fields of Mathematics, including Analysis, Statistics and Calculus''"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/presentation"
            android:paddingTop="10dp"
            android:textSize="18sp"
            android:textStyle="bold|italic"/>
        <TextView
            android:text="Comments:"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/profileName"
            android:paddingTop="10dp"
            android:textSize="24sp"/>

    </LinearLayout>


    </android.support.v4.widget.DrawerLayout>
