...
    <string name="app_name_title">TUTOSAURUS</string>
    <string name="app_name">TutoSaurus</string>
    <string name="welcoming_message">The app for every tutor and tutoree.</string>
    <string name="welcome_message_description">Dino welcome</string>
    <string name="email_ask">Enter Email</string>
    <string name="password_ask">Enter Password</string>
    <string name="connection_button">Log in</string>
    <string name="register_button">Sign up</string>
    <string name="password_reset_title">Forgot Password?</string>
    <string name="password_forgot_btn">Forgot your Password?</string>
    <string name="reset_password_btn">RESET PASSWORD</string>
    <string name="login">Login</string>
    <string name="login_failed">Login failed</string>
...
    <string name="profile_picture">Profile Picture</string>
    <string name="messages">Messages</string>
    <string name="dino_logo">Dino logo</string>
    <string name="by_subject">By subject</string>
    <string name="phone_logo">Phone logo</string>
    <string name="list_view_course_picture">Course Picture</string>
    <string name="albert_einstein">Albert Einstein</string>
    <string name="dino_register">Dino register</string>
    <string name="enter_message_prompt">Enter message…</string>
    <string name="by_name">By name</string>
    <string name="meeting_confirmation_location">Location:</string>
    <string name="alberto_chiappa">Alberto Chiappa</string>
    <string name="create_meeting_date">Date</string>
...
